Fix broken layout in IE 11 on a big screen + make it look like in previous versions [MAILPOET-1002]

--- a/assets/css/src/settings.styl
+++ b/assets/css/src/settings.styl
@@ -11,7 +11,7 @@
     margin 25px 0 0 0
     display flex
     flex-direction row
-    justify-content space-around
+    justify-content flex-start
     > li
       flex-grow 1
       flex-shrink 1
